# rsd

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml
anmol/: compute_clustering.py  generate_mocks.py  utils.py
config/: config.yaml  model.yaml
docs/: feature_engineering.ipynb  hod.ipynb  scripts.ipynb
scripts/: prep_sim.py
scripts/analysis/: clustering.py
scripts/catalogs/: hod_variation.py  mocks.py  prep_sim.py
scripts/training/: train_gnn.py
src/: utils.py
src/rsd/: data.py  graphs.py  models.py  preprocess.py  utils.py
