[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rsd-analysis"
version = "0.1.0"
requires-python = ">=3.9"

# expose src/rsd/ at root,
# so scripts import as e.g. `rsd.graphs` rather than `scr.rsd.graphs`
[tool.setuptools]
packages = ["rsd"]

[tool.setuptools.package-dir]
rsd = "src/rsd"
